<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mi_action_home"
        android:tag="tag_action_mortgage_checker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/menu_item_home" />

    <item
        android:id="@+id/mi_action_property_list"
        android:tag="tag_action_mortgage_checker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/menu_item_search_properties" />

    <item
        android:id="@+id/mi_action_mortgage_checker"
        android:tag="tag_action_mortgage_checker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/menu_item_mortgage_adviser" />
    <item
        android:id="@+id/mi_action_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/menu_item_login" />
</menu>