<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SaleAddFragment">

    <com.mapbox.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:mapbox_cameraTargetLat="40.4168"
        app:mapbox_cameraTargetLng="-3.7038"
        app:mapbox_cameraZoom="9.0" />

    <TextView
        android:id="@+id/tv_property_type"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/tv_add_property_type"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/tv_property_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mapView" />

    <TextView
        android:id="@+id/tv_property_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/tv_add_property_sale_price"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/tv_property_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_property_type" />

    <TextView
        android:id="@+id/tv_property_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/tv_add_property_size"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/tv_property_num_bedrooms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_property_price" />

    <TextView
        android:id="@+id/tv_property_num_bedrooms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/tv_add_property_num_bedrooms"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/tv_property_num_bathrooms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_property_size" />

    <TextView
        android:id="@+id/tv_property_num_bathrooms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/tv_add_property_num_bathrooms"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/cb_property_parking"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_property_num_bedrooms" />

    <TextView
        android:id="@+id/tv_property_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_add_property_description"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cb_property_parking" />

    <Spinner
        android:id="@+id/sp_property_type"
        android:layout_width="155dp"
        android:layout_height="48dp"
        app:layout_constraintLeft_toRightOf="@id/tv_property_type"
        app:layout_constraintTop_toBottomOf="@id/mapView" />

    <EditText
        android:id="@+id/et_property_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Precio"
        android:hint="@string/et_add_property_hint_price"
        android:inputType="numberDecimal"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/et_property_size"
        app:layout_constraintStart_toStartOf="@+id/sp_property_type"
        app:layout_constraintTop_toBottomOf="@+id/sp_property_type"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/et_property_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Metros cuadrado"
        android:hint="@string/et_add_property_hint_size"
        android:inputType="number"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/et_property_num_bedrooms"
        app:layout_constraintStart_toStartOf="@+id/et_property_price"
        app:layout_constraintTop_toBottomOf="@+id/et_property_price" />

    <EditText
        android:id="@+id/et_property_num_bedrooms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Habitaciones"
        android:hint="@string/et_add_property_hint_bedrooms"
        android:inputType="number"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/et_property_num_bathrooms"
        app:layout_constraintStart_toStartOf="@+id/et_property_size"
        app:layout_constraintTop_toBottomOf="@+id/et_property_size" />

    <EditText
        android:id="@+id/et_property_num_bathrooms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Baños"
        android:hint="@string/et_add_property_hint_bathrooms"
        android:inputType="number"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/cb_property_parking"
        app:layout_constraintStart_toStartOf="@+id/et_property_num_bedrooms"
        app:layout_constraintTop_toBottomOf="@+id/et_property_num_bedrooms" />

    <EditText
        android:id="@+id/et_ml_property_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/et_add_property_hint_description"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@id/tv_property_description"
        app:layout_constraintTop_toBottomOf="@id/cb_property_parking"
        android:importantForAutofill="no" />

    <CheckBox
        android:id="@+id/cb_property_parking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/cb_add_property_parking"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/cb_property_lift"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_property_num_bathrooms" />

    <CheckBox
        android:id="@+id/cb_property_lift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/cb_add_property_lift"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/cb_property_leasehold"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cb_property_parking"
        app:layout_constraintTop_toBottomOf="@id/tv_property_num_bathrooms" />

    <CheckBox
        android:id="@+id/cb_property_leasehold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/cb_add_property_leasehold"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cb_property_lift"
        app:layout_constraintTop_toBottomOf="@id/tv_property_num_bathrooms" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="12dp"
        android:text="@string/btn_back"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_add"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_ml_property_description" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="12dp"
        android:text="@string/btn_add"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@id/et_ml_property_description" />

</androidx.constraintlayout.widget.ConstraintLayout>