<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_management_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:gravity="center_horizontal"
        android:text="@string/tv_management_title"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_management_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:text="@string/tv_management_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_management_title" />

    <View
        android:id="@+id/dvd_filter_top"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="8dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/teal"
        android:backgroundTintMode="src_atop"
        app:layout_constraintBottom_toTopOf="@id/rg_search_map_search_type"
        app:layout_constraintTop_toBottomOf="@id/tv_management_description" />

    <RadioGroup
        android:id="@+id/rg_search_map_search_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/muted_aqua"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dvd_filter_top">

        <RadioButton
            android:id="@+id/rbtn_search_map_rent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbtn_search_map_rent"
            android:textColor="@color/barbie_pink"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rbtn_search_map_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbtn_search_map_buy"
            android:textColor="@color/barbie_pink"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/logout" />

    </RadioGroup>

    <FrameLayout
        android:id="@+id/fl_frag_management"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_search_map_search_type"
        tools:layout_editor_absoluteX="-24dp">

    </FrameLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fl_btn_add_property"
        android:layout_width="wrap_content"
        android:layout_height="416dp"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:clickable="true"
        android:contentDescription="@string/btn_add_property"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>