<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_add_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_add_property_title"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <RadioGroup
        android:id="@+id/rg_add_property"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/muted_aqua"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_add_title">

        <RadioButton
            android:id="@+id/rbtn_add_rental"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtn_search_map_rent"
            android:textColor="@color/barbie_pink"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rbtn_add_sale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtn_search_map_buy"
            android:textColor="@color/barbie_pink"
            android:textSize="12sp" />
    </RadioGroup>

    <FrameLayout
        android:id="@+id/fl_frag_management"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_add_property"
        tools:layout_editor_absoluteX="-24dp"></FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>